chore: update skills and agent to Spring Boot 4.x and Java 25
Upgrade Spring Boot references from 3.x to 4.x and Java 17+ to Java 25,
reflecting virtual threads, structured concurrency, records, and pattern
matching. Add batch processing reference. Remove GraalVM native references
per user preference. Update .gitignore with .DS_Store entry.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>